Column spacing fixes

--- a/style.scss
+++ b/style.scss
@@ -84,7 +84,6 @@ $nwea-font-graphite: #414142;
 
 #lp-inner-content-wrapper {
     position: relative;
-    height: 250px;
         .lp-inner-content {
             margin-top: -200px;
             display: block;
